[package]
name = "uptimeplot"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "uptimeplot"
path = "src/main.rs"

[dependencies]
bytemuck = "1.15"
image = { version = "0.25.10", default-features = false, features = ["png"] }
eframe = "0.34.3"
egui = "0.34.3"
egui_plot = "0.35.0"
chrono = "0.4"
astro = "2.0.0"
nav-types = "0.5"
clap = { version = "4", features = ["derive"] }
home = "0.5.12"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false
