[package]
name = "uptimeplot-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uptimeplot-rs"
path = "src/main.rs"

[dependencies]
bytemuck = "1.15"
image = "0.24"
eframe = "0.26.0"
egui = "0.26.0"
egui_plot = "0.26.0"
chrono = "0.4"
astro = "2.0.0"
blh = "0.3.0"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

